2000-05-30 Dekel Tsur  <dekel@math.tau.ac.il>

	* src/trans_mgr.C (insertVerbatim): Do not use insetquote when the
	text is Hebrew.
                             
2000-05-27  Dekel Tsur  <dekel@math.tau.ac.il>

	* src/text.C (draw): draw bars under foreign language words.
	
	* src/LColor.[Ch]: add LColor::language
                            
2000-05-27 Dekel Tsur  <dekel@math.tau.ac.il>

	* src/lyxcursor.h (boundary): New member variable

	* src/text.C (IsBoundary): New methods

	* src/text.C: Use the above for currect cursor movement when there
	is both RTL & LTR text.
	
	* src/text2.C: ditto
	
	* src/bufferview_funcs.C (ToggleAndShow): ditto

2000-05-30  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/text.C (DeleteLineForward): set selection to true to avoid
	that DeleteEmptyParagraphMechanism does some magic. This is how it
	is done in all other functions, and seems reasonable.
	(DeleteWordForward): do not jump over non-word stuff, since
	CursorRightOneWord() already does it.
	
	Remove the CHECK tag from DeleteLineForward, DeleteWordForward and
	DeleteWordBackward, since they seem safe to me (since selection is
	set to "true") DeleteEmptyParagraphMechanism does nothing.

2000-05-29  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyx_main.C (easyParse): simplify the code by factoring the
	part that removes parameters from the command line.
	(LyX): check wether wrong command line options have been given.

2000-05-29  Lior Silberman <slior@math.huji.ac.il>

	* src/lyx_main.C : add support for specifying user LyX
	directory via command line option -userdir.

2000-05-26 Dekel Tsur  <dekel@math.tau.ac.il>

	* src/menus.C (Add_to_toc_menu): Limit the number of popups, and
	the number of items per popup.
	(Add_to_refs_menu): Ditto.
	
2000-05-26  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* src/lyxparagraph.h: renamed ClearParagraph() to
	StripLeadingSpaces() and moved it to paragraph.C. We pass the